Change log for gfsm

v0.0.7 Sun, 20 Nov 2005 14:39:33 +0100
   + added lookup(), paths(), path<->string conversion functions

v0.0.6 Mon, 12 Sep 2005 01:45:46 +0200
   + added mingw32 patch (getline)

v0.0.5 Wed, 22 Sep 2004 00:23:49 +0200
   + removed references to file "LICENSE" in header comments
   + fixed small size bug in clear() for gfsmUserAlphabet
   + added key-stringification to gfsm_automaton_draw() methods

v0.0.4 Tue, 14 Sep 2004 15:57:56 +0200
   + fixed bug in gfsm_alphabet_size() for user alphabets

v0.0.3 Mon, 13 Sep 2004 10:25:23 +0200
   + added some algebraic operations, fixed some bugs

v0.0.2 Thu,  2 Sep 2004 17:34:18 +0200
   + basic accessors and algebra

v0.0.1 Tue, 24 Aug 2004 11:34:59 +0200
   + created